--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<button mat-raised-button color="primary">Hello Material</button>
-<router-outlet />
+<app-shell>
+    <router-outlet />
+</app-shell>
