--- a/src/app/shared/shell/shell.component.html
+++ b/src/app/shared/shell/shell.component.html
@@ -7,8 +7,7 @@
         <mat-nav-list>
             <a mat-list-item routerLink="/" (click)="drawer.close()">Home</a>
             <a mat-list-item routerLink="/login" (click)="drawer.close()">Login</a>
-            <a mat-list-item routerLink="/kanban" (click)="drawer.close()">Kanban Demo</a>
-            <a mat-list-item routerLink="/customers" (click)="drawer.close()">SSR Demo</a>
+            <a mat-list-item routerLink="/dashboard" (click)="drawer.close()">Dashboard</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
@@ -21,24 +20,13 @@
                     *ngIf="isHandset$ | async">
                 <mat-icon aria-label="Sidenav toggle icon">menu</mat-icon>
             </button>
-            <span class="logo" routerLink="/">🔥 Angular Firestarter</span>
+            <span class="logo" routerLink="/">🚦 Progress Tracker</span>
 
             <span class="fill-space"></span>
             <div *ngIf="!(isHandset$ | async)">
-                <a mat-button routerLink="/kanban" (click)="drawer.close()">🍱 Kanban Demo</a>
-                <a mat-button routerLink="/customers" (click)="drawer.close()">⚡️ SSR Demo</a>
+                <a mat-button routerLink="/kanban" (click)="drawer.close()">📊 Dashboard</a>
                 <a mat-button routerLink="/login" (click)="drawer.close()">🔑 Login</a>
             </div>
-
-            <button mat-icon-button [matMenuTriggerFor]="menu">
-                <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu">
-                <a mat-menu-item href="https://fireship.page.link/slack">
-                <i>💬</i>
-                <span>Chat on Slack</span>
-                </a>
-            </mat-menu>
         </mat-toolbar>
 
         <ng-content></ng-content>
