--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -1,1 +1,11 @@
-<p>login-page works!</p>
+<div *ngIf="true">
+    <h1>Login</h1>
+
+    <app-account-login></app-account-login>
+</div>
+
+<div *ngIf="false">
+    <p>
+        Logged in as <strong></strong>
+    </p>
+</div>
