--- a/src/app/shared/shell/shell.component.html
+++ b/src/app/shared/shell/shell.component.html
@@ -2,7 +2,8 @@
     <mat-sidenav #drawer class="sidenav" fixedInViewport
             [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
             [mode]="(isHandset$ | async) ? 'over' : 'side'"
-            [opened]="false">
+            [opened]="false"
+            color="primary">
         <mat-toolbar>Menu</mat-toolbar>
         <mat-nav-list>
             <a mat-list-item routerLink="/" (click)="drawer.close()">Home</a>
@@ -11,7 +12,7 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <mat-toolbar>
+        <mat-toolbar color="primary">
             <button
                     type="button"
                     aria-label="Toggle sidenav"
