--- a/src/app/user/account-login/account-login.component.html
+++ b/src/app/user/account-login/account-login.component.html
@@ -1,74 +1,76 @@
 <mat-card>
-    <div *ngIf="isSignup">
-      <h3>Create Account</h3>
+    <mat-card-content>
+        <div *ngIf="isSignup">
+            <h3><strong>Create Account</strong></h3>
+    
+        <button mat-stroked-button (click)="changeType('login')">
+            Returning user?
+        </button>
+        </div>
   
-      <button mat-stroked-button (click)="changeType('login')">
-        Returning user?
-      </button>
-    </div>
+        <div *ngIf="isLogin">
+        <h3><strong>Sign In</strong></h3>
+        <button size="small" mat-stroked-button (click)="changeType('signup')">
+            New user?
+        </button>
+        </div>
   
-    <div *ngIf="isLogin">
-      <h3>Sign In</h3>
-      <button size="small" mat-stroked-button (click)="changeType('signup')">
-        New user?
-      </button>
-    </div>
-  
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <mat-form-field [color]="username?.valid ? 'accent' : 'primary'">
-        <input
-          matInput
-          formControlName="username"
-          type="username"
-          placeholder="Username"
-          autocomplete="off"
-        />
-  
-        <mat-error *ngIf="username?.invalid && username?.dirty">
-          You must enter a valid username address
-        </mat-error>
-      </mat-form-field>
-  
-      <mat-form-field [color]="username?.valid ? 'accent' : 'primary'">
-        <input
-          matInput
-          formControlName="password"
-          type="password"
-          placeholder="Password"
-          autocomplete="off"
-        />
-  
-        <mat-error *ngIf="password?.invalid && password?.dirty">
-          Password must be at least 6 characters long
-        </mat-error>
-      </mat-form-field>
-  
-      <mat-form-field
-        [color]="passwordDoesMatch ? 'accent' : 'warn'"
-        *ngIf="isSignup"
-      >
-        <input
-          matInput
-          formControlName="passwordConfirm"
-          type="password"
-          placeholder="Confirm password"
-          autocomplete="off"
-        />
-  
-        <mat-error *ngIf="passwordConfirm?.dirty && !passwordDoesMatch">
-          Password does not match
-        </mat-error>
-      </mat-form-field>
-  
-      <mat-error class="server-error">{{ serverMessage }}</mat-error>
-  
-      <button
-        mat-raised-button
-        color="accent"
-        type="submit"
-        [disabled]="form.invalid || !passwordDoesMatch || loading"
-      >
-        Submit
-      </button>
-    </form>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <mat-form-field [color]="username?.valid ? 'accent' : 'primary'">
+            <input
+            matInput
+            formControlName="username"
+            type="username"
+            placeholder="Username"
+            autocomplete="off"
+            />
+    
+            <mat-error *ngIf="username?.invalid && username?.dirty">
+            You must enter a valid username address
+            </mat-error>
+        </mat-form-field>
+    
+        <mat-form-field [color]="username?.valid ? 'accent' : 'primary'">
+            <input
+            matInput
+            formControlName="password"
+            type="password"
+            placeholder="Password"
+            autocomplete="off"
+            />
+    
+            <mat-error *ngIf="password?.invalid && password?.dirty">
+            Password must be at least 6 characters long
+            </mat-error>
+        </mat-form-field>
+    
+        <mat-form-field
+            [color]="passwordDoesMatch ? 'accent' : 'warn'"
+            *ngIf="isSignup"
+        >
+            <input
+            matInput
+            formControlName="passwordConfirm"
+            type="password"
+            placeholder="Confirm password"
+            autocomplete="off"
+            />
+    
+            <mat-error *ngIf="passwordConfirm?.dirty && !passwordDoesMatch">
+            Password does not match
+            </mat-error>
+        </mat-form-field>
+    
+        <mat-error class="server-error">{{ serverMessage }}</mat-error>
+    
+        <button
+            mat-raised-button
+            color="accent"
+            type="submit"
+            [disabled]="form.invalid || !passwordDoesMatch || loading"
+        >
+            Submit
+        </button>
+        </form>
+    </mat-card-content>
   </mat-card>
