--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,6 @@
-<header>
-    <h1>Home Page</h1>
-    <p>home-page works!</p>
-</header>
+<div class="content">
+    <header>
+        <h1>Home Page</h1>
+        <p>home-page works!</p>
+    </header>
+</div>
