--- a/src/app/user/account-login/account-login.component.html
+++ b/src/app/user/account-login/account-login.component.html
@@ -7,6 +7,8 @@
             Returning user?
         </button>
         </div>
+
+        <span class="fill-space"></span>
   
         <div *ngIf="isLogin">
         <h3><strong>Sign In</strong></h3>
@@ -17,11 +19,11 @@
   
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <mat-form-field [color]="username?.valid ? 'accent' : 'primary'">
+            <mat-label>Username</mat-label>
             <input
             matInput
             formControlName="username"
             type="username"
-            placeholder="Username"
             autocomplete="off"
             />
     
@@ -31,11 +33,11 @@
         </mat-form-field>
     
         <mat-form-field [color]="username?.valid ? 'accent' : 'primary'">
+            <mat-label>Password</mat-label>
             <input
             matInput
             formControlName="password"
             type="password"
-            placeholder="Password"
             autocomplete="off"
             />
     
@@ -48,11 +50,11 @@
             [color]="passwordDoesMatch ? 'accent' : 'warn'"
             *ngIf="isSignup"
         >
+            <mat-label>Confirm Password</mat-label>
             <input
             matInput
             formControlName="passwordConfirm"
             type="password"
-            placeholder="Confirm password"
             autocomplete="off"
             />
     
