--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <h1>Dashboard</h1>
+    <!-- <h1>Dashboard</h1>
     <table mat-table [dataSource]="topicsArray">
         <ng-container matColumnDef="topicId">
             <th mat-header-cell *matHeaderCellDef>Topic Number</th>
@@ -18,5 +18,5 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    </table> -->
 </div>
