--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,9 +1,30 @@
 <div class="content">
-    <!-- <h1>Dashboard</h1>
+    <h1>Dashboard</h1>
     <table mat-table [dataSource]="topicsArray">
         <ng-container matColumnDef="topicId">
             <th mat-header-cell *matHeaderCellDef>Topic Number</th>
             <td mat-cell *matCellDef="let topic">{{ topic.topicId }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="topicName">
+            <th mat-header-cell *matHeaderCellDef>Topic Name</th>
+            <td mat-cell *matCellDef="let topic">{{ topic.topicName }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="topicCompleted">
+            <th mat-header-cell *matHeaderCellDef>Completed?</th>
+            <td mat-cell *matCellDef="let topic">{{ topic.topicCompleted }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="confidenceLevel">
+            <th mat-header-cell *matHeaderCellDef>Confidence Level</th>
+            <td mat-cell *matCellDef="let topic">
+                <mat-select [(value)]="topic.confidenceLevel">
+                    <mat-option value="low">Low</mat-option>
+                    <mat-option value="medium">Medium</mat-option>
+                    <mat-option value="high">High</mat-option>
+                </mat-select>
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="lastReviewed">
@@ -11,12 +32,7 @@
             <td mat-cell *matCellDef="let topic">{{ topic.lastReviewed }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="confidenceLevel">
-            <th mat-header-cell *matHeaderCellDef>Confidence Level</th>
-            <td mat-cell *matCellDef="let topic">{{ topic.confidenceLevel }}</td>
-        </ng-container>
-
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table> -->
+    </table>
 </div>
