--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="content">
     <h1>Dashboard</h1>
-    <table mat-table [dataSource]="topicsArray">
+    <mat-tab-group>
+
+    </mat-tab-group>
+    <table mat-table [dataSource]="topicsArray[0]">
         <ng-container matColumnDef="topicId">
             <th mat-header-cell *matHeaderCellDef>Topic Number</th>
             <td mat-cell *matCellDef="let topic">{{ topic.topicId }}</td>
