--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,48 +1,49 @@
 <div class="content">
     <h1>Dashboard</h1>
-    <mat-tab-group>
+    <mat-tab-group mat-stretch-tabs="false">
+        <mat-tab *ngFor="let subject of topicsArray; let i = index" [label]="'Subject ' + (i+1)">
+            <table #tables mat-table [dataSource]="subject">
+                <ng-container matColumnDef="topicId">
+                    <th mat-header-cell *matHeaderCellDef>Topic Number</th>
+                    <td mat-cell *matCellDef="let topic">{{ topic.topicId }}</td>
+                </ng-container>
 
+                <ng-container matColumnDef="topicName">
+                    <th mat-header-cell *matHeaderCellDef>Topic Name</th>
+                    <td mat-cell *matCellDef="let topic">{{ topic.topicName }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="topicCompleted">
+                    <th mat-header-cell *matHeaderCellDef>Completed?</th>
+                    <td mat-cell *matCellDef="let topic">
+                        <mat-checkbox [checked]="(topic.topicCompleted == 1)"></mat-checkbox>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="confidenceLevel">
+                    <th mat-header-cell *matHeaderCellDef>Confidence Level</th>
+                    <td mat-cell *matCellDef="let topic">
+                        <mat-select [(value)]="topic.confidenceLevel">
+                            <mat-option value="low">Low</mat-option>
+                            <mat-option value="medium">Medium</mat-option>
+                            <mat-option value="high">High</mat-option>
+                        </mat-select>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="lastReviewed">
+                    <th mat-header-cell *matHeaderCellDef>Last Reviewed</th>
+                    <td mat-cell *matCellDef="let topic">
+                        <input matInput [value]="topic.lastReviewed">
+                        <!-- <mat-hint>MM/DD/YYYY</mat-hint>
+                        <mat-datepicker-toggle [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker> -->
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </mat-tab>
     </mat-tab-group>
-    <table mat-table [dataSource]="topicsArray[0]">
-        <ng-container matColumnDef="topicId">
-            <th mat-header-cell *matHeaderCellDef>Topic Number</th>
-            <td mat-cell *matCellDef="let topic">{{ topic.topicId }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="topicName">
-            <th mat-header-cell *matHeaderCellDef>Topic Name</th>
-            <td mat-cell *matCellDef="let topic">{{ topic.topicName }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="topicCompleted">
-            <th mat-header-cell *matHeaderCellDef>Completed?</th>
-            <td mat-cell *matCellDef="let topic">
-                <mat-checkbox [checked]="(topic.topicCompleted == 1)"></mat-checkbox>
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="confidenceLevel">
-            <th mat-header-cell *matHeaderCellDef>Confidence Level</th>
-            <td mat-cell *matCellDef="let topic">
-                <mat-select [(value)]="topic.confidenceLevel">
-                    <mat-option value="low">Low</mat-option>
-                    <mat-option value="medium">Medium</mat-option>
-                    <mat-option value="high">High</mat-option>
-                </mat-select>
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="lastReviewed">
-            <th mat-header-cell *matHeaderCellDef>Last Reviewed</th>
-            <td mat-cell *matCellDef="let topic">
-                <input matInput [value]="topic.lastReviewed">
-                <!-- <mat-hint>MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker> -->
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
 </div>
