--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,10 +1,12 @@
 <div class="content">
     <h1>Dashboard</h1>
+    <button mat-raised-button >Revise</button>
+
     <mat-slide-toggle style="float: right;" [(ngModel)]="isPriority" (click)="renderPriorityTables(userSubjects)">
         Sort by priority
     </mat-slide-toggle>
     <mat-tab-group mat-stretch-tabs="false">
-        <mat-tab *ngFor="let subject of topicsArray; let i = index" [label]="'Subject ' + (i + 1)">
+        <mat-tab *ngFor="let subject of topicsArray; let i = index" [label]="getSubjectName(i)">
             <table #tables mat-table [dataSource]="subject">
                 <ng-container matColumnDef="topicId">
                     <th mat-header-cell *matHeaderCellDef>Topic Number</th>
@@ -19,14 +21,15 @@
                 <ng-container matColumnDef="topicCompleted">
                     <th mat-header-cell *matHeaderCellDef>Completed?</th>
                     <td mat-cell *matCellDef="let topic">
-                        <mat-checkbox [checked]="(topic.topicCompleted == 1)"></mat-checkbox>
+
+                        <mat-checkbox (change)="updateUserTopic(topic, $event.checked, getSubjectId(i))" [checked]="(topic.topicCompleted == 1)"></mat-checkbox>
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="confidenceLevel">
                     <th mat-header-cell *matHeaderCellDef>Confidence Level</th>
                     <td mat-cell *matCellDef="let topic">
-                        <mat-select [(value)]="topic.confidenceLevel">
+                        <mat-select [(value)]="topic.confidenceLevel" (selectionChange)="updateUserTopic(topic, $event.value, getSubjectId(i))">
                             <mat-option value="low">Low</mat-option>
                             <mat-option value="medium">Medium</mat-option>
                             <mat-option value="high">High</mat-option>
@@ -38,11 +41,11 @@
                     <th mat-header-cell *matHeaderCellDef>Last Reviewed</th>
                     <td mat-cell *matCellDef="let topic">
                         <br/>
-                        <mat-form-field>
-                            <input matInput [value]="topic.lastReviewed" [max]="today" [matDatepicker]="picker">
-                            <mat-hint>MM/DD/YYYY</mat-hint>
+                        <mat-form-field appearance="outline">
+                            <input matInput (dateChange)="updateUserTopic(topic, $event.target.value, getSubjectId(i))" [value]="topic.lastReviewed" [max]="today" [matDatepicker]="picker" >
+                            <mat-hint>DD/MM/YYYY</mat-hint>
                             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                            <mat-datepicker #picker></mat-datepicker>
+                            <mat-datepicker #picker ></mat-datepicker>
                         </mat-form-field>
                     </td>
                 </ng-container>
