--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,20 @@
 <div class="content">
     <header>
         <h1>Home Page</h1>
-        <p>home-page works!</p>
+        <p>How it works:</p>
+        <ol>
+            <li>Create an account and log in</li>
+            <li>Select your subjects</li>
+            <li>Tick any topics that you have completed in class</li>
+            <li>Select a confidence level for each topic</li>
+            <li>When you want to revise:
+                <ul>
+                    <li>Press the checkbox at the top to sort by priority</li>
+                    <li>This orders the topics based on what you need to revise most</li>
+                    <li>Pick the topic at the top of the list, and revise it</li>
+                    <li>When you are finished, update your confidence level and set your last review date to the day you revised</li>
+                </ul>
+            </li>
+        </ol>
     </header>
 </div>
